# rust-rest-api

./: .env.example  Cargo.toml  Query.sql  makefile  script.sh
src/: main.rs
src/conf/: database.rs  jwt.rs
src/controller/: auth_controller.rs
src/domain/: user.rs
src/dto/: login_request.rs  mod.rs  register_request.rs
src/repository/: auth_repository.rs
src/service/: auth_service.rs  mod.rs
