[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = "0.4.39"
config = "0.15.6"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "chrono", "mysql"] }
tokio = { version = "1.43.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.11"
rust-argon2 = "2.1.0"
rand = "0.8.5"
http = "0.2.12"
jsonwebtoken = "8.0"
time = "0.3.37"